A `-J<flag>` in a module's javac args starts the compiler worker's JVM with that flag, as the javac launcher does, and never reaches javac's own argument list — a flag jk already grants, such as the jdk.compiler exports Error Prone documents, is not passed twice, and workers are pooled by the flags they start with — so zipkin's imported Error Prone `-J--add-exports` lines compile instead of failing with 'invalid flag'