@@ -47,7 +47,37 @@ class ForkedJavacSpecTest {
         assertThat(Files.readString(plain)).doesNotContain(PluginProtocol.CP_ANALYSIS);
     }
 
+    @Test
+    void a_J_argument_starts_the_worker_jvm_and_never_reaches_javac(@TempDir Path dir) throws Exception {
+        // javac's launcher spelling: -J<flag> is for the JVM running the compiler, not for javac,
+        // which rejects it as an invalid flag. The importer keeps Error Prone's -J--add-exports
+        // lines verbatim, so the engine has to split them the way the launcher does.
+        String granted = "-J" + JdkCompilerAccess.JVM_FLAGS.getFirst();
+        ForkedJavac.Request req = request(
+                dir, List.of("-Xlint:all", granted, "-J--add-opens=java.base/java.lang=ALL-UNNAMED", "-J-Dprobe=1"));
+
+        assertThat(req.javacArgs()).containsExactly("-Xlint:all");
+        assertThat(req.jvmArgs())
+                .containsExactly(
+                        JdkCompilerAccess.JVM_FLAGS.getFirst(),
+                        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                        "-Dprobe=1");
+        Path spec = SessionContext.where(Session.defaults(), () -> ForkedJavac.writeSpec(req));
+        assertThat(PluginSpec.read(spec).args()).containsExactly("-Xlint:all");
+
+        List<String> flags = ForkedJavac.workerJvmFlags(List.of(), null, req.jvmArgs());
+        assertThat(flags).contains("--add-opens=java.base/java.lang=ALL-UNNAMED", "-Dprobe=1");
+        assertThat(flags.stream().filter(JdkCompilerAccess.JVM_FLAGS.getFirst()::equals))
+                .as("a flag the worker grants anyway is not passed twice")
+                .hasSize(1);
+        assertThat(request(dir, List.of("-Xlint:all")).jvmArgs()).isEmpty();
+    }
+
     private static ForkedJavac.Request request(Path dir) {
+        return request(dir, List.of());
+    }
+
+    private static ForkedJavac.Request request(Path dir, List<String> extraArgs) {
         Path root = dir.resolve("m");
         return new ForkedJavac.Request(
                 null,
@@ -58,6 +88,6 @@ class ForkedJavacSpecTest {
                 root.resolve("classes"),
                 root.resolve("gen"),
                 21,
-                List.of());
+                extraArgs);
     }
 }
